Documentation edits made through Mintlify web editor

--- a/features/benchmark/budget-notification.mdx
+++ b/features/benchmark/budget-notification.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Budget Notification
+description: Compare performance and track market movements across competitors.
 ---
 
+# Budget Notification
+
+This section explains how Competitive Intelligence works inside Epsilo.
