--- a/features/collaboration/advanced-filtering.mdx
+++ b/features/collaboration/advanced-filtering.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Advance filtering
+description: Compare performance and track market movements across competitors.
 ---
 
+# Advance filtering
+
+This section explains how Competitive Intelligence works inside Epsilo.
