--- a/features/collaboration/export-tools.mdx
+++ b/features/collaboration/export-tools.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: export tools
+description: Compare performance and track market movements across competitors.
 ---
 
+# export tools
+
+This section explains how Competitive Intelligence works inside Epsilo.
