--- a/features/decide/cross-channel-excution.mdx
+++ b/features/decide/cross-channel-excution.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Cross channel execution
+description: Compare performance and track market movements across competitors.
 ---
 
+# Cross channel execution
+
+This section explains how Competitive Intelligence works inside Epsilo.
