--- a/features/execute/scheduled-automation.mdx
+++ b/features/execute/scheduled-automation.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Scheduled automation
+description: Compare performance and track market movements across competitors.
 ---
 
+# Scheduled automation
+
+This section explains how Competitive Intelligence works inside Epsilo.
