--- a/features/aggregate/digital-shelf-tracking.mdx
+++ b/features/aggregate/digital-shelf-tracking.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Digital Shelf Tracking
+description: Compare performance and track market movements across competitors.
 ---
 
+# Digital Shelf Tracking
+
+This section explains how Competitive Intelligence works inside Epsilo.
