--- a/features/aggregate/keyword-lab.mdx
+++ b/features/aggregate/keyword-lab.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Keyword Lab
+description: Compare performance and track market movements across competitors.
 ---
 
+# Keyword Lab
+
+This section explains how Competitive Intelligence works inside Epsilo.
