--- a/features/aggregate/unified-api.mdx
+++ b/features/aggregate/unified-api.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Unified API
+description: Compare performance and track market movements across competitors.
 ---
 
+# Unified API
+
+This section explains how Competitive Intelligence works inside Epsilo.
