--- a/features/benchmark/ask-botep.mdx
+++ b/features/benchmark/ask-botep.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Ask Botep
+description: Compare performance and track market movements across competitors.
 ---
 
+# Ask Botep
+
+This section explains how Competitive Intelligence works inside Epsilo.
