--- a/features/benchmark/metrics-benchmark.mdx
+++ b/features/benchmark/metrics-benchmark.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Metric Benchmark
+description: Compare performance and track market movements across competitors.
 ---
 
+# Metric Benchmark
+
+This section explains how Competitive Intelligence works inside Epsilo.
