--- a/features/collaboration/custom-views.mdx
+++ b/features/collaboration/custom-views.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Custom views
+description: Compare performance and track market movements across competitors.
 ---
 
+# Custom views
+
+This section explains how Competitive Intelligence works inside Epsilo.
