--- a/features/collaboration/media-planning.mdx
+++ b/features/collaboration/media-planning.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Media planning
+description: Compare performance and track market movements across competitors.
 ---
 
+# Media planning
+
+This section explains how Competitive Intelligence works inside Epsilo.
