--- a/features/collaboration/workspace-sync.mdx
+++ b/features/collaboration/workspace-sync.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Workspace sync
+description: Compare performance and track market movements across competitors.
 ---
 
+# Workspace sync
+
+This section explains how Competitive Intelligence works inside Epsilo.
