--- a/features/decide/budget-distribution.mdx
+++ b/features/decide/budget-distribution.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Budget Distribution
+description: Compare performance and track market movements across competitors.
 ---
 
+# Budget Distribution
+
+This section explains how Competitive Intelligence works inside Epsilo.
