--- a/features/decide/bulk-actions.mdx
+++ b/features/decide/bulk-actions.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Bulk Actions
+description: Compare performance and track market movements across competitors.
 ---
 
+# Bulk Actions
+
+This section explains how Competitive Intelligence works inside Epsilo.
