--- a/features/decide/campaign-taxonomy.mdx
+++ b/features/decide/campaign-taxonomy.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Campaign taxonomy
+description: Compare performance and track market movements across competitors.
 ---
 
+# Campaign taxonomy
+
+This section explains how Competitive Intelligence works inside Epsilo.
