--- a/features/decide/custom-workflows.mdx
+++ b/features/decide/custom-workflows.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Custom workflows
+description: Compare performance and track market movements across competitors.
 ---
 
+# Custom workflows
+
+This section explains how Competitive Intelligence works inside Epsilo.
