--- a/features/execute/agent-orchestration.mdx
+++ b/features/execute/agent-orchestration.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Agent orchestration
+description: Compare performance and track market movements across competitors.
 ---
 
+# Agent orchestration
+
+This section explains how Competitive Intelligence works inside Epsilo.
