--- a/features/execute/automated-reporting.mdx
+++ b/features/execute/automated-reporting.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Automated reporting
+description: Compare performance and track market movements across competitors.
 ---
 
+# Automated reporting
+
+This section explains how Competitive Intelligence works inside Epsilo.
