--- a/features/execute/smart-alerts.mdx
+++ b/features/execute/smart-alerts.mdx
@@ -1,5 +1,8 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: Smart alerts
+description: Compare performance and track market movements across competitors.
 ---
 
+# Smart alerts
+
+This section explains how Competitive Intelligence works inside Epsilo.
