Documentation edits made through Mintlify web editor

--- a/features/collaboration/export-tools.mdx
+++ b/features/collaboration/export-tools.mdx
@@ -1,8 +1,8 @@
 ---
-title: export tools
-description: Compare performance and track market movements across competitors.
+title: "Export tools"
+description: "Compare performance and track market movements across competitors."
 ---
 
-# export tools
+# Export tools
 
 This section explains how Competitive Intelligence works inside Epsilo.
