--- a/introduction/getting-started.mdx
+++ b/introduction/getting-started.mdx
@@ -1,5 +1,20 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Quickstart"
+description: "Get your workspace running in minutes."
 ---
 
+# Getting Started
+
+1. **Sign in** to your account.
+2. **Connect** your retail marketplaces (Shopee, Lazada, TikTok Shop).
+3. **Create your first campaign** using the Automation tool.
+4. **Set up alerts** for budget thresholds and performance triggers.
+5. **Invite your team** and share dashboards.
+
+---
+
+### Next Steps
+
+- [Automate Campaigns →](/features/marketing-automation)
+- [Explore Insights →](/features/digital-shelf-analytics)
+- [Use the API →](/features/headless-api)
