Documentation edits made through Mintlify web editor

--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -1,5 +1,19 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Introduction"
+description: "Description of Get started with Epsilo and learn the fundamentals of the platform"
 ---
 
+## **About Epsilo**
+
+Epsilo is designed for e-commerce businesses running ads across multiple Southeast Asian marketplaces. Whether you're managing campaigns on Shopee, Lazada, or TikTok Shop, Epsilo provides the tools to centralize, automate, and optimize your advertising efforts.
+
+## Key Features
+
+- **Multi-marketplace Integration:** Connect all your marketplace accounts in one place.
+- **Intelligent Budget Distribution:** AI-powered budget allocation based on performance metrics.
+- **Unified Campaign Management:** Create and manage campaigns across platforms simultaneously.
+- **Real-time Analytics:** Comprehensive dashboards with actionable insights.
+
+#### Next Steps
+
+Ready to get started? Continue to [**Account Setup**](https://sheet-vine-53101840.figma.site/#) to create your first Epsilo workspace.
