Documentation edits made through Mintlify web editor

--- a/features/aggregate/keyword-lab.mdx
+++ b/features/aggregate/keyword-lab.mdx
@@ -1,8 +1,12 @@
----
-title: Keyword Lab
-description: Compare performance and track market movements across competitors.
----
-
 # Keyword Lab
 
-This section explains how Competitive Intelligence works inside Epsilo.
+Research high-impact keywords and search trends.
+
+Identify top-performing search terms across marketplaces.\
+Compare keyword traffic, competitiveness, and conversion efficiency in one dashboard.
+
+**Use it to**
+
+- Discover trending keywords by category or product.
+- Track brand and competitor share of search.
+- Export keyword lists for campaign setup.
