Documentation edits made through Mintlify web editor

--- a/introduction/navigating-epsilo.mdx
+++ b/introduction/navigating-epsilo.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Introduction"
+title: "Navigating Epsilo"
 description: "Description of Get started with Epsilo and learn the fundamentals of the platform"
 ---
 
