--- a/introduction/getting-started.mdx
+++ b/introduction/getting-started.mdx
@@ -1,34 +1,31 @@
 ---
-title: Start Guide
-description: Learn the fundamentals of Epsilo — connect your storefronts, set up automations, and start optimizing campaigns in minutes.
+title: "Getting Started"
+description: "Learn the fundamentals of Epsilo — connect your storefronts, set up automations, and start optimizing campaigns in minutes."
 ---
 
-# Start Guide
-
-Epsilo is designed to help **retail media teams move faster, automate smarter, and scale effortlessly** across Shopee, Lazada, and TikTok Shop.  
+Epsilo is designed to help **retail media teams move faster, automate smarter, and scale effortlessly** across Shopee, Lazada, and TikTok Shop.\
 Whether you're managing multiple campaigns, tracking performance, or building automation workflows, Epsilo gives operators a unified, intuitive workspace that adapts to your goals.
 
 This guide walks you through the key areas of Epsilo and helps you get set up quickly — so you can focus on what matters most: **growing GMV, not spreadsheets.**
-
----
 
 ## Intro to Epsilo
 
 Get a high-level overview of the Epsilo environment by watching our **Intro to Epsilo** video:
 
-> 🎥 *Coming soon: A quick walkthrough of the Epsilo workspace, automation center, and reporting dashboards.*
+> 🎥 _Coming soon: A quick walkthrough of the Epsilo workspace, automation center, and reporting dashboards._
 
-Epsilo brings together data aggregation, benchmarking, and execution into one command center.  
+Epsilo brings together data aggregation, benchmarking, and execution into one command center.\
 You can monitor campaigns, automate budgets, and get AI insights — all from a single workspace.
 
 ---
 
 ## Try Epsilo in Demo Mode
 
-To explore Epsilo’s features without connecting a storefront, visit our **Demo Workspace**.  
+To explore Epsilo’s features without connecting a storefront, visit our **Demo Workspace**.\
 Any updates you make are local to your browser and reset on refresh.
 
 Demo mode is perfect for testing:
+
 - Campaign creation and structure
 - Budget scheduling and distribution
 - AI recommendations (Botep)
@@ -42,10 +39,11 @@ Demo mode is perfect for testing:
 Join a **live onboarding session** to see how top operators use Epsilo for campaign automation and optimization.
 
 You’ll learn how to:
-- Connect storefronts  
-- Set up Budget Scheduler and Distribution  
-- Build hyper-automation rules  
-- Generate AI Reports with Botep  
+
+- Connect storefronts
+- Set up Budget Scheduler and Distribution
+- Build hyper-automation rules
+- Generate AI Reports with Botep
 
 > 📅 Register via [Epsilo Onboarding Calendar](https://calendly.com/alex-vo/meeting-with-alex?back=1)
 
@@ -56,11 +54,12 @@ You’ll learn how to:
 Access our **Learning Library** — a playlist of short onboarding videos that cover the most common Epsilo workflows.
 
 Topics include:
-- Navigating your workspace  
-- Connecting Shopee, Lazada, and TikTok Shop  
-- Scheduling budgets and automations  
-- Understanding metrics and reports  
-- Creating your first custom workflow  
+
+- Navigating your workspace
+- Connecting Shopee, Lazada, and TikTok Shop
+- Scheduling budgets and automations
+- Understanding metrics and reports
+- Creating your first custom workflow
 
 > 🎓 Great for self-paced onboarding or quick refreshers.
 
@@ -70,24 +69,28 @@ Topics include:
 
 Once you’ve explored the basics, it’s time to configure Epsilo for your team.
 
-The best place to start is by **creating your workspace** using your work email:  
+The best place to start is by **creating your workspace** using your work email:\
 👉 [Sign up for Epsilo](https://next.epsilo.ai/signup)
 
 After setup, follow our tailored onboarding paths:
 
 ### Onboarding for Admins
+
 Learn how to:
-- Invite users and manage roles  
-- Connect storefronts and API credentials  
-- Enable automation rules and alerts  
-- Configure data syncing and reporting  
+
+- Invite users and manage roles
+- Connect storefronts and API credentials
+- Enable automation rules and alerts
+- Configure data syncing and reporting
 
 ### Onboarding for Teams
+
 Understand how to:
-- Manage and monitor campaigns  
-- Create views for stores or brands  
-- Automate recurring reports  
-- Collaborate across workspaces  
+
+- Manage and monitor campaigns
+- Create views for stores or brands
+- Automate recurring reports
+- Collaborate across workspaces
 
 ---
 
@@ -95,9 +98,9 @@ Understand how to:
 
 Learn by example through real-world workflows from top Epsilo users and internal teams.
 
-- [How we plan Peak Season events](../playbooks/peak-season-management)  
-- [How we automate daily optimization](../playbooks/basic-guide)  
-- [How agencies use Budget Distribution AI](../features/decide/budget-distribution)  
+- [How we plan Peak Season events](../playbooks/peak-season-management)
+- [How we automate daily optimization](../playbooks/basic-guide)
+- [How agencies use Budget Distribution AI](../features/decide/budget-distribution)
 - [How performance teams monitor GMV Max](../playbooks/gmv-max-features)
 
 > Each playbook includes checklist-style steps, templates, and setup examples.
@@ -108,10 +111,10 @@ Learn by example through real-world workflows from top Epsilo users and internal
 
 Meet other operators, share best practices, and get answers directly from the Epsilo team.
 
-- 💬 [Join our Slack community](https://epsilo.ai/community)  
-- 🧠 Learn from automation experts  
-- 🎟️ Attend community events and product demos  
-- 🪄 Contribute feature ideas and get early access to new releases  
+- 💬 [Join our Slack community](https://epsilo.ai/community)
+- 🧠 Learn from automation experts
+- 🎟️ Attend community events and product demos
+- 🪄 Contribute feature ideas and get early access to new releases
 
 > The Slack community is also the best place to connect with Epsilo’s product and support team.
 
@@ -119,8 +122,8 @@ Meet other operators, share best practices, and get answers directly from the Ep
 
 ## Related Resources
 
-- [Navigating Epsilo](./navigating-epsilo)  
-- [Storefront Integration Guide](./storefront-integration)  
-- [Workspace FAQs](./workspace-faqs)  
-- [Feature Requests](./feature-requests)  
+- [Navigating Epsilo](./navigating-epsilo)
+- [Storefront Integration Guide](./storefront-integration)
+- [Workspace FAQs](./workspace-faqs)
+- [Feature Requests](./feature-requests)
 - [Support Tickets](./support-tickets)
