--- a/introduction/invite-members.mdx
+++ b/introduction/invite-members.mdx
@@ -1,4 +1,83 @@
 ---
-title: "Invite Members"
-description: "Description of your new file."
+title: Invite Members
+description: Learn how to invite teammates to your Epsilo workspace and assign roles for collaboration.
 ---
+Collaboration in Epsilo starts by inviting your team to your workspace.  
+Each new member receives a secure email invitation and can be assigned a specific role when joining.
+
+---
+
+## Overview
+
+You can invite teammates to any workspace where you have **Owner** or **Admin** permissions.  
+Invitations are sent via email and automatically expire after **7 days** for security.
+
+After a member accepts the invite, their permissions are based on the assigned role:
+- **Owner** – full workspace and billing control  
+- **Admin** – manage members, storefronts, and automations  
+- **Member** – run and monitor campaigns  
+- **Viewer** – read-only access to dashboards  
+
+> 💡 **Tip:** Use role-based access to control who can modify campaigns or automations.
+
+---
+
+## How to Invite a Member
+
+1. Go to **Workspace Settings → Members**.  
+2. Click **Invite** in the top right corner.  
+3. Enter the teammate’s **work email address**.  
+4. Select their role from the dropdown (Owner, Admin, Member, Viewer).  
+5. Click **Send invite**.
+
+The invited user receives an email with a secure join link.  
+Once accepted, they’ll appear in your workspace member list.
+
+---
+
+## Managing Invitations
+
+### Resend an Invitation
+If the user didn’t receive or lost their invite:
+1. Go to **Settings → Members**.  
+2. Find the pending invitation.  
+3. Click **Resend invite**.
+
+### Cancel or Revoke an Invitation
+1. Locate the pending invite in the member list.  
+2. Click **Revoke** to cancel access before acceptance.
+
+### Expired Invitations
+Invites expire automatically after **7 days**.  
+You can resend them anytime using the same email address.
+
+> 🔒 Only Owners and Admins can send, revoke, or resend invitations.
+
+---
+
+## Best Practices
+
+- Always invite members using their **company-issued email** (e.g., `@brand.com`).  
+- Review the member list quarterly and remove inactive users.  
+- Assign **Viewer** roles to external partners who only need read-only access.  
+- Use **2FA** or **SSO** to secure workspace logins.  
+
+---
+
+## Troubleshooting
+
+| Issue | Possible Cause | Solution |
+|--------|----------------|-----------|
+| User didn’t receive an invite | Email filter or domain block | Ask them to check spam or whitelist `@epsilo.io` |
+| Invite expired | The link was unused for 7 days | Resend a new invitation |
+| Member already exists | Email is already active in workspace | Update their role instead of re-inviting |
+
+---
+
+## Related Topics
+
+- [Members and Roles](./members-and-roles) — Understand permissions and access levels.  
+- [Security](./security) — Learn how Epsilo protects workspace data and credentials.  
+- [Workspaces](./workspaces) — Create or manage multiple brand or regional environments.
+
+> ✉️ Inviting the right people ensures each operator has secure, role-specific access to your campaigns and automation tools.
