--- a/introduction/navigating-epsilo.mdx
+++ b/introduction/navigating-epsilo.mdx
@@ -1,19 +1,134 @@
 ---
 title: "Navigating Epsilo"
-description: "Description of Get started with Epsilo and learn the fundamentals of the platform"
+description: "Learn how to move through the Epsilo workspace, explore dashboards, and find key automation modules quickly."
 ---
 
-## **About Epsilo**
+Epsilo is designed for **operators** — fast, focused, and data-driven.\
+This guide helps you understand the workspace layout and where to find key modules for automation, reporting, and insights.
 
-Epsilo is designed for e-commerce businesses running ads across multiple Southeast Asian marketplaces. Whether you're managing campaigns on Shopee, Lazada, or TikTok Shop, Epsilo provides the tools to centralize, automate, and optimize your advertising efforts.
+## Overview
 
-## Key Features
+When you log into [one.epsilo.io](https://one.epsilo.io), the workspace opens to your **dashboard view**, showing your latest media data and automation performance.
 
-- **Multi-marketplace Integration:** Connect all your marketplace accounts in one place.
-- **Intelligent Budget Distribution:** AI-powered budget allocation based on performance metrics.
-- **Unified Campaign Management:** Create and manage campaigns across platforms simultaneously.
-- **Real-time Analytics:** Comprehensive dashboards with actionable insights.
+The interface is divided into three key areas:
 
-#### Next Steps
+1. **Sidebar** — Navigate between products and tools.
+2. **Main dashboard** — View campaign metrics and activity.
+3. **Top bar** — Access filters, search, and workspace settings.
 
-Ready to get started? Continue to [**Account Setup**](https://sheet-vine-53101840.figma.site/#) to create your first Epsilo workspace.
+![Epsilo workspace layout](../images/navigation-layout.png)
+
+---
+
+## Sidebar
+
+The sidebar is your primary navigation tool.\
+It groups features by function — matching how operators plan, automate, and analyze.
+
+| Section                     | Description                                                                     |
+| --------------------------- | ------------------------------------------------------------------------------- |
+| **Intraday**                | View real-time performance (GMV, ROAS, spend, impressions) across marketplaces. |
+| **Keyword Lab**             | Research keywords, track search trends, and discover new opportunities.         |
+| **Digital Shelf Analytics** | Analyze product visibility, ranking, and share of shelf across marketplaces.    |
+| **Marketing Automation**    | Manage campaign scheduling, budget distribution, and automation scripts.        |
+| **Operation Index**         | Track efficiency, automation coverage, and process improvement metrics.         |
+| **Performance Index**       | Benchmark campaign performance against targets.                                 |
+| **Partner Center**          | Manage agency access, workspaces, and shared reports.                           |
+| **Subscription & Passport** | View your billing plan and connected credentials.                               |
+
+> 💡 **Tip:** Collapse unused sections to focus on active modules.
+
+---
+
+## Dashboard
+
+The **dashboard** adapts to the module you’re in.
+
+- **Intraday view** shows live marketplace performance.
+- **Automation view** lists running workflows and recent rule triggers.
+- **Keyword or Shelf dashboards** visualize trends and ranking changes.
+
+You can use the **filters** at the top to refine your view:
+
+- Marketplace
+- Country
+- Media channel
+- Storefront
+
+### Updating Data
+
+Dashboards auto-refresh every few minutes, but you can also click the **⟳ refresh icon** to pull live data manually.
+
+---
+
+## Command Bar
+
+Use the command bar (`⌘ + K` / `Ctrl + K`) to jump instantly between:
+
+- Campaigns
+- Automations
+- Reports
+- Connected stores
+
+Type “budget”, “shelf”, or “Botep” to find the related module instantly.
+
+> ⚡ Try it: Press `⌘ + K` and search for “Distribution” to open your Budget Distribution dashboard.
+
+---
+
+## Workspace Switcher
+
+If you manage multiple brands or regions, use the **workspace switcher** at the top left to move between environments.
+
+Each workspace stores:
+
+- Its own storefront connections
+- Members and roles
+- Automation rules and reports
+
+> 🧠 **Tip:** Use separate workspaces for each brand or business unit for clearer reporting.
+
+---
+
+## Filters and Sorting
+
+Every module supports consistent filtering and sorting:
+
+- Click **Filter** to narrow by country, store, or category.
+- Click **Sort** to arrange by ROAS, GMV, or spend.
+- Save frequently used filters as **custom views** in _Marketing Automation → Custom Views_.
+
+---
+
+## Activity & Notifications
+
+The **Activity Center** shows updates on automation triggers, alerts, and AI insights.\
+Botep will surface key findings like:
+
+> “ROAS dropped 12% on Lazada last 3 hours – check Budget Distribution.”
+
+Notifications appear in real time at the top right of the screen.
+
+---
+
+## Keyboard Shortcuts
+
+| Action               | Shortcut             |
+| -------------------- | -------------------- |
+| Open command bar     | `⌘ + K` / `Ctrl + K` |
+| Refresh data         | `R`                  |
+| Search across Epsilo | `/`                  |
+| Toggle sidebar       | `Shift + S`          |
+| Go to dashboard      | `G` then `D`         |
+
+You can view all shortcuts from the help icon (?) in the bottom-left corner.
+
+---
+
+## Next Steps
+
+- [Workspaces](./workspaces) → Learn how Epsilo organizes your teams and storefronts.
+- [Marketing Automation Overview](../marketing-automation/overview) → Start automating your first campaigns.
+- [Keyboard Shortcuts Reference](../glossary/index#shortcuts)
+
+> 🪄 Epsilo is built for operators. Once you’re comfortable navigating the workspace, try enabling your first **automation rule** or **budget scheduler** to start optimizing immediately.
