Documentation edits made through Mintlify web editor

--- a/introduction/getting-started.mdx
+++ b/introduction/getting-started.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Getting started"
+description: "Navigating your workspace, tables, and dashboards"
 ---
 
-# Getting started with Epsilo: Navigating your workspace, tables, and dashboards
 
 > TL;DR\
 > Epsilo is built around tables. Use the left-side navigation bar to locate tables, which display real-time data that you can customize by adjusting time ranges, metrics, and filters.\
